# mikrotik-status

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/schema/: netbox.graphql
backend/src/: config.rs  context.rs  error.rs  lib.rs  main.rs
backend/src/api/: device.rs  device_type.rs  location.rs  mod.rs  query.rs  settings.rs  site.rs
backend/src/topology/: fetch_topology.graphql  mod.rs  query.rs
backend/src/topology/model/: device.rs  device_type.rs  link.rs  location.rs  mod.rs  site.rs
binary/: Cargo.toml  build.rs
binary/src/: error.rs  main.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  local.css
frontend/graphql/: .graphqlconfig
frontend/src/: app.rs  error.rs  main.rs
frontend/src/app/: mod.rs  route.rs
frontend/src/components/: context.rs  device.rs  error.rs  location.rs  mod.rs  site.rs
frontend/src/graphql/: .graphqlconfig  devices.rs  get_device_details.graphql  get_location_details.graphql  get_site_details.graphql  list_devices.graphql  list_sites.graphql  locations.rs  mod.rs  ping_device.graphql  settings.graphql  settings.rs  sites.rs
frontend/src/pages/: devices.rs  mod.rs
frontend/src/pages/sites/: device_details.rs  list.rs  location_details.rs  mod.rs  site_details.rs  site_list.rs
implementation/: Cargo.toml
implementation/src/: config.rs  error.rs  lib.rs
implementation/src/api/: device.rs  location.rs  mod.rs  query.rs  settings.rs  site.rs
implementation/src/netbox/: mod.rs
implementation/src/netbox/graphql/: get_device.graphql  list_devices.graphql  list_devices.rs  mod.rs  schema.graphql
implementation/src/topology/: fetch_topology.graphql  graphql_operations.rs  list_devices.graphql  model.rs  query.rs
implementation/src/topology/model/: location.rs  mod.rs  site.rs
keycloak/: run-local-keycloak.sh
