[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "5.0.4"
graphql_client = "0.12.0"
lazy_static = "1.4.0"
serde = "1.0.147"
log = "0.4"
indexmap = "=1.6.2"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
thiserror = "1.0.38"
surge-ping = { git = "https://github.com/mokeyish/surge-ping.git", branch = "unpriviledged_ping" }
ipnet = "2.5.1"
cached = "0.42.0"
clap = { version = "4.0.30", features = ["env", "derive"] }