[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
yewtil = { version = "0.4", features = ["future"] }
yew-nested-router = { version = "0.1.0" }
patternfly-yew = "0.3.0"
graphql_client = { version = "0.11.0", features = ["reqwest"] }
reqwest = "0.11.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4"
wasm-logger = "0.2.0"
web-sys = "0.3.51"
thiserror = "1.0.37"
yew-oauth2 = { version = "0.5.0" }
openidconnect = { version = "2.2", default-features = false, features = ["reqwest", "rustls-tls"] }
js-sys = "0.3.6"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.7"
itertools = { version = "0.10.5", features = ["use_alloc"] }


[build-dependencies]
implementation = { path = "../implementation" }
anyhow = "1.0.66"