[package]
name = "implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "4.0.16"
graphql_client = "0.11.0"
lazy_static = "1.4.0"
serde = "1.0.147"
log = "0.4"
config = "0.13.2"
indexmap = "=1.6.2"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"] }
thiserror = "1.0.37"
#surge-ping = "0.7.3"
surge-ping = { git = "https://github.com/mokeyish/surge-ping.git", branch = "unpriviledged_ping" }
ipnet = "2.5.1"
cached = "0.40.0"